# line-bot-translate

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  docker-compose.test.yml  docker-compose.yml  justfile  v2.md
.github/workflows/: ci.yml  docker_img.yml
src/: app.rs  config.rs  locale.rs  main.rs
src/groq/: client.rs  mod.rs  sanitize.rs
src/handlers/: api_key.rs  health.rs  line_webhook.rs  mod.rs  translate.rs  webhook.rs
src/line/: mod.rs  reply.rs  signature.rs  webhook.rs
src/service/: mod.rs
tests/: webhook.hurl
