[package]
name = "line-bot-translate"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
parking_lot = "0.12"
reqwest = { version = "0.13.4", features = ["json"] }
hmac = "0.13.0"
sha2 = "0.11.0"
base64 = "0.22.1"
dotenvy = "0.15.7"
regex = "1.12.4"
once_cell = "1.21.4"
anyhow = "1.0.102"
utoipa = { version = "5.5.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
